# FableTime

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
assets/: icon.icns
macos/: Info.plist
scripts/: bundle-macos.sh
src/: app.rs  db.rs  exporter.rs  main.rs  models.rs  palette.rs
src/ui/: calendar.rs  common.rs  export.rs  mod.rs  projects.rs  root.rs  tracker.rs
